fix(Login) improves size of digit inputs on mobile

--- a/src/components/pages/Editor/index.module.sass
+++ b/src/components/pages/Editor/index.module.sass
@@ -3,13 +3,6 @@
 $windowHeight: calc(100vh - $navbar-height - $size-7)
 $primary-very-light: #edfaf8
 
-.loginWrapper
-	position: relative
-	margin-top: 15vh
-
-	+tablet
-		margin-top: 6rem
-
 .fieldsContainer
 	+desktop
 		min-width: min(40%, 27rem)
